# FRED-model

./: .gitignore  LSTM.py  data.py  main.py  pyproject.toml  training.py
benchmarking/: chart.py  eval.py  gif.py
models/: DroneStalker.py  GRU.py  LSTM.py
preprocessing/: prediction.py
weights/LSTM-0.2/: drone_stalker-0.2.1.pth  drone_stalker-0.2.2.pth  drone_stalker-0.2.3.pth  drone_stalker-0.2.4.pth  drone_stalker-0.2.5.pth  drone_stalker-0.2.pth  log-0.2.1.txt  log-0.2.2.txt  log-0.2.3.txt  log-0.2.4.txt  log-0.2.5.txt  log.txt
weights/LSTM-0.3/: drone_stalker-0.3.pth  log.txt
