[project]
name = "model"
version = "0.1.0"
description = "A project for training AI models on the uFRED dataset"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "torch==2.2.0",
    "numpy<2.0",
    "pillow>=12.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]
